--- a/plugin.xml
+++ b/plugin.xml
@@ -111,17 +111,18 @@
         <source-file src="src/android/TwilioVideoUtils.java" target-dir="src/org/apache/cordova/twiliovideo" />
         <source-file src="src/android/MessageCountListener.java" target-dir="src/org/apache/cordova/twiliovideo" />
         <source-file src="src/android/TwilioChatUnreadMessages.java" target-dir="src/org/apache/cordova/twiliovideo" />
+        <source-file src="src/android/CircleImageView.java" target-dir="src/org/apache/cordova/twiliovideo" />
 
         <framework src="com.google.android.gms:play-services-gcm:+" />
         <framework src="src/android/twiliovideo.gradle" custom="true" type="gradleReference" />
 
         <resource-file src="src/android/res/drawable/ic_call_black_24dp.xml" target="res/drawable/ic_call_black_24dp.xml" />
         <resource-file src="src/android/res/drawable/ic_call_end_white_24px.xml" target="res/drawable/ic_call_end_white_24px.xml" />
-        <resource-file src="src/android/res/drawable/ic_call_white_24px.xml" target="res/drawable/ic_call_white_24px.xml" />
-        <resource-file src="src/android/res/drawable/ic_mic_green_24px.xml" target="res/drawable/ic_mic_green_24px.xml" />
+        <resource-file src="src/android/res/drawable/ic_call_white_24px.png" target="res/drawable/ic_call_white_24px.png" />
+        <resource-file src="src/android/res/drawable/ic_mic_green_24px.png" target="res/drawable/ic_mic_green_24px.png" />
         <resource-file src="src/android/res/drawable/ic_mic_off_red_24px.xml" target="res/drawable/ic_mic_off_red_24px.xml" />
-        <resource-file src="src/android/res/drawable/ic_switch_camera_512dp.xml" target="res/drawable/ic_switch_camera_512dp.xml" />
-        <resource-file src="src/android/res/drawable/ic_videocam_green_24px.xml" target="res/drawable/ic_videocam_green_24px.xml" />
+        <resource-file src="src/android/res/drawable/ic_switch_camera_512dp.png" target="res/drawable/ic_switch_camera_512dp.png" />
+        <resource-file src="src/android/res/drawable/ic_videocam_green_24px.png" target="res/drawable/ic_videocam_green_24px.png" />
         <resource-file src="src/android/res/drawable/ic_videocam_off_red_24px.xml" target="res/drawable/ic_videocam_off_red_24px.xml" />
 		<resource-file src="src/android/res/drawable/ic_phonelink_ring_white_24dp.xml" target="res/drawable/ic_phonelink_ring_white_24dp.xml" />
 		<resource-file src="src/android/res/drawable/ic_volume_up_white_24dp.xml" target="res/drawable/ic_volume_up_white_24dp.xml" />
@@ -130,6 +131,8 @@
         <resource-file src="src/android/res/drawable/close.png" target="res/drawable/close.png" />
         <resource-file src="src/android/res/drawable/ic_volume_headhphones_white_24dp.xml" target="res/drawable/ic_volume_headhphones_white_24dp.xml" />
         <resource-file src="src/android/res/drawable/unread_message_badge.xml" target="res/drawable/unread_message_badge.xml" />
+        <resource-file src="src/android/res/drawable/ic_app_name.png" target="res/drawable/ic_app_name.png" />
+        <resource-file src="src/android/res/drawable/user.png" target="res/drawable/user.png" />
 
 
         <resource-file src="src/android/res/layout/activity_video.xml" target="res/layout/activity_video.xml" />
@@ -138,6 +141,7 @@
 
         <resource-file src="src/android/res/values/dimens.xml" target="res/values/dimens.xml" />
         <resource-file src="src/android/res/values/styles.xml" target="res/values/styles.xml" />
+        <resource-file src="src/android/res/values/values.xml" target="res/values/values.xml" />
 
     </platform>
 </plugin>
