--- a/src/android/twiliovideo.gradle
+++ b/src/android/twiliovideo.gradle
@@ -8,4 +8,6 @@ dependencies {
     implementation "com.twilio:chat-android:6.0.0"
     implementation 'com.google.android.material:material:1.1.0-rc02'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
